--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/checkerdb
-
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.security.user.name=dkersh
 spring.security.user.password=qwerty
