done: database queries fix: /check returning JSON

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/checkerdb
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.security.user.name=dkersh
 spring.security.user.password=qwerty
+spring.datasource.username=postgres
+spring.datasource.password=postgres
