add: password length check, customizable via application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.security.user.name=dkersh
 spring.security.user.password=qwerty
 spring.datasource.username=postgres
 spring.datasource.password=postgres
+
+app.lengthcheck.min=5
+app.lengthcheck.max=20
