fix: wrong test case refactor: renamed mock beans so they don't match actual ones

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.datasource.password=postgres
 
 app.lengthcheck.min=5
 app.lengthcheck.max=20
+
+spring.main.allow-bean-definition-overriding=true
