--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,8 +4,27 @@ name: Test
 on: [ pull_request, push ]
 
 jobs:
+
   test:
     runs-on: ubuntu-latest
+
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
+        env:
+          POSTGRES_PASSWORD: postgres
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
 
     steps:
       - uses: actions/checkout@v2
@@ -14,6 +33,9 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 16
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Cache Maven local repository
         uses: actions/cache@v2.1.4
