--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,6 +29,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Install dependencies
+        run: npm install pg
+
+      - name: Initialize database
+        run: node db.js
+
       - name: Set up JDK 16
         uses: actions/setup-java@v1
         with:
